# ITIS

./: .gitignore  README.MD  docker-compose.yml  ext.py  train.ipynb
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: annotations.py  datasets.py  export.py  media.py  roi.py  yolo_models.py
backend/app/core/: config.py  geometry.py  utils.py
backend/app/db/: __init__.py  models.py
backend/app/domain/: __init__.py  classes.py  schemas.py
backend/app/services/: dataset_import.py  frame_extraction.py  inference.py  model_registry.py  yolo_labels.py
backend/app/workers/: tasks.py
backend/tests/: test_annotation_dedup.py  test_yolo_labels.py
docs/: ARCHITECTURE.md  DATASET_WORKFLOW.md  REQUIREMENTS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AnnotationCanvas.tsx  Sidebar.tsx
frontend/src/data/: sample.ts
tools/: video_frame_yolo_extract.conf  video_frame_yolo_extract.py
