[project]
name = "itis-backend"
version = "0.1.0"
description = "FastAPI backend for the ITIS traffic annotation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.19",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "opencv-python>=4.10.0.82",
    "ultralytics>=8.2.0",
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.7",
    "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
